--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -1,3 +1,26 @@
 JoinQuit
-join.message = {0}[§2+§7]
-quit.message = {0}[§4-§7]
+join.message={0}[§2+§7]
+quit.message={0}[§4-§7]
+#Color
+color.black=Black
+color.dark_gray=Darkgray
+color.gray=Gray
+color.white=White
+color.aqua=Aqua
+color.dark_aqua=Darkaqua
+color.blue=Blue
+color.dark_blue=Darkblue
+color.dark_purple=Purple
+color.light_purple=Magenta
+color.red=Red
+color.gold=Orange
+color.yellow=Yellow
+color.green=Lime
+color.dark_green=Green
+color.click=Click, to join {0}!
+#Team
+team.already=%wYou are already in this Team!
+team.title=Choose a team!
+team.changed=%hDein Team wurde erfolgreich gewechselt!
+#JumpnRun
+jumpnrun.finished=Very pro! You will receive §a{0} Schnitzels!
