--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -2,10 +2,29 @@
 color.text=§7
 color.highlight=§e
 color.warning=§c
-
 JoinQuit
-join.message = {0}[§2+§7]
-quit.message = {0}[§4-§7]
-
+join.message={0}[§2+§7]
+quit.message={0}[§4-§7]
 #Color
-color.blue
+color.black=Schwarz
+color.dark_gray=Dunkelgrau
+color.gray=Grau
+color.white=Weiß
+color.aqua=Türkis
+color.dark_aqua=Dunkeltürkis
+color.blue=Blau
+color.dark_blue=Dunkelblau
+color.dark_purple=Violett
+color.light_purple=Magenta
+color.red=Rot
+color.gold=Orange
+color.yellow=Gelb
+color.green=Hellgrün
+color.dark_green=Grün
+color.click=Klicke, um {0} beizutreten!
+#Team
+team.already=%wDu bist bereits in diesem Team!
+team.title=Wähl ein Team aus!
+team.changed=%hDein Team wurde erfolgreich gewechselt!
+#JumpnRun
+jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
