--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -2,6 +2,7 @@
 color.text=§7
 color.highlight=§e
 color.warning=§c
+
 JoinQuit
 join.message={0}[§2+§7]
 quit.message={0}[§4-§7]
@@ -28,3 +29,7 @@ team.title=Wähl ein Team aus!
 team.changed=%hDein Team wurde erfolgreich gewechselt!
 #JumpnRun
 jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
+#Unit
+unit.seconds=Sekunden
+unit.minutes=Minuten
+unit.hours=Stunden
