--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -1,6 +1,7 @@
 JoinQuit
 join.message={0}[§2+§7]
 quit.message={0}[§4-§7]
+
 #Color
 color.black=Black
 color.dark_gray=Darkgray
@@ -24,3 +25,7 @@ team.title=Choose a team!
 team.changed=%hDein Team wurde erfolgreich gewechselt!
 #JumpnRun
 jumpnrun.finished=Very pro! You will receive §a{0} Schnitzels!
+#Unit
+unit.seconds=seconds
+unit.minutes=minutes
+unit.hours=hours
