--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -29,3 +29,9 @@ jumpnrun.finished=Very pro! You will receive §a{0} Schnitzels!
 unit.seconds=seconds
 unit.minutes=minutes
 unit.hours=hours
+#Timer
+timer.timer=Gametime
+#Teleport
+teleport.time=%wTeleport in {0} Seconds!
+teleport.teleport=§aTeleport...!
+teleport.left=%aDu you are now vulnerable
