--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -6,6 +6,7 @@ color.warning=§c
 JoinQuit
 join.message={0}[§2+§7]
 quit.message={0}[§4-§7]
+
 #Color
 color.black=Schwarz
 color.dark_gray=Dunkelgrau
@@ -33,3 +34,9 @@ jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
 unit.seconds=Sekunden
 unit.minutes=Minuten
 unit.hours=Stunden
+#Timer
+timer.timer=Spielzeit
+#Teleport
+teleport.time=%wTeleport in {0} Sekunden!
+teleport.teleport=§aTeleportiere...!
+teleport.left=%aDu bist ab jetzt angreifbar! Viel Glück!
