--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -29,6 +29,9 @@ jumpnrun.finished=Very pro! You will receive §a{0} Schnitzels!
 unit.seconds=seconds
 unit.minutes=minutes
 unit.hours=hours
+#Countdown
+countdown.message=%rDas Spiel startet in %h{0}%r Sekunden!
+countdown.countdown=§aDie Karte wird gerendert!
 #Timer
 timer.timer=Gametime
 #Teleport
