--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -34,6 +34,9 @@ jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
 unit.seconds=Sekunden
 unit.minutes=Minuten
 unit.hours=Stunden
+#Countdown
+countdown.message=%rDas Spiel startet in %h{0}%r Sekunden!
+countdown.countdown=§aDie Karte wird gerendert!
 #Timer
 timer.timer=Spielzeit
 #Teleport
