--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -19,15 +19,17 @@ color.dark_blue=Dunkelblau
 color.dark_purple=Violett
 color.light_purple=Magenta
 color.red=Rot
+color.dark_red=Dunkelrot
 color.gold=Orange
 color.yellow=Gelb
 color.green=Hellgrün
 color.dark_green=Grün
-color.click=Klicke, um {0} beizutreten!
+color.click=%rKlicke, um {0}%r beizutreten!
 #Team
 team.already=%wDu bist bereits in diesem Team!
 team.title=Wähl ein Team aus!
 team.changed=%hDein Team wurde erfolgreich gewechselt!
+team.full=%wDas Team ist schon voll!
 #JumpnRun
 jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
 #Unit
@@ -36,10 +38,22 @@ unit.minutes=Minuten
 unit.hours=Stunden
 #Countdown
 countdown.message=%rDas Spiel startet in %h{0}%r Sekunden!
-countdown.countdown=§aDie Karte wird gerendert!
+countdown.finished=§aDie Karte wird gerendert!
+countdown.reset=%wDer Countdown wurde wieder zurückgesetzt!
+countdown.missing=%wEs fehlen/fehlt noch %h{0}%w Spieler!
 #Timer
 timer.timer=Spielzeit
 #Teleport
 teleport.time=%wTeleport in {0} Sekunden!
 teleport.teleport=§aTeleportiere...!
 teleport.left=%aDu bist ab jetzt angreifbar! Viel Glück!
+#Start
+start.usage=/start
+start.description=Setzt den Countdown auf 15 Sekunden
+start.already=%wDas Spiel startet bereits!
+start.missing=%wEs fehlen/fehlt noch %h{0}%w Spieler!
+#Teamsize
+teamsize.usage=/teamsize <Teamgröße>
+teamsize.description=Setzt die Teamgröße
+teamsize.set=%hDie Teamgröße wurde auf {0} gesetzt!
+teamsize.already=%wDie Teamgröße beträgt bereits %h{0}%w!
