--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -14,15 +14,17 @@ color.dark_blue=Darkblue
 color.dark_purple=Purple
 color.light_purple=Magenta
 color.red=Red
+color.dark_red=Darkred
 color.gold=Orange
 color.yellow=Yellow
 color.green=Lime
 color.dark_green=Green
-color.click=Click, to join {0}!
+color.click=%rClick, to join {0}%r!
 #Team
 team.already=%wYou are already in this Team!
 team.title=Choose a team!
-team.changed=%hDein Team wurde erfolgreich gewechselt!
+team.changed=%hYour Team has been changed!
+team.full=%wThe team is full!
 #JumpnRun
 jumpnrun.finished=Very pro! You will receive §a{0} Schnitzels!
 #Unit
@@ -30,11 +32,23 @@ unit.seconds=seconds
 unit.minutes=minutes
 unit.hours=hours
 #Countdown
-countdown.message=%rDas Spiel startet in %h{0}%r Sekunden!
-countdown.countdown=§aDie Karte wird gerendert!
+countdown.message=%rThe Game starts in %h{0}%r seconds!
+countdown.finished=§aThe Map is rendert!
+countdown.reset=%wThe countdown was resettet!
+countdown.missing=%wThere are %h{0}%w players missing!
 #Timer
 timer.timer=Gametime
 #Teleport
 teleport.time=%wTeleport in {0} Seconds!
 teleport.teleport=§aTeleport...!
-teleport.left=%aDu you are now vulnerable
+teleport.left=%aYou you are now vulnerable#Start
+#Start
+start.usage=/start
+start.description=Sets the countdown to 15 seconds
+start.already=%wGame is already starting!
+start.missing=%wThere are %h{0}%w players missing!
+#Teamsize
+teamsize.usage=/teamsize <teamsize>
+teamsize.description=Sets the teamsize
+teamsize.set=%hThe teamsize was set to {0}!
+teamsize.already=%wThe teamsize is already %h{0}%w!
