--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -1,7 +1,6 @@
 JoinQuit
-join.message={0}[§2+§7]
-quit.message={0}[§4-§7]
-
+join.message={0}%r[§2+%r]
+quit.message={0}%r[§4-%r]
 #Color
 color.black=Black
 color.dark_gray=Darkgray
@@ -39,9 +38,12 @@ countdown.missing=%wThere are %h{0}%w players missing!
 #Timer
 timer.timer=Gametime
 #Teleport
+teleport.title=%wSneak to fall!
+teleport.subtitle=%hYou will be teleported every 10 seconds!
 teleport.time=%wTeleport in {0} Seconds!
 teleport.teleport=§aTeleport...!
-teleport.left=%aYou you are now vulnerable#Start
+teleport.left=%wYou you are now in free fall and vulnerable
+teleport.remove=%w{0} seconds till you fall automatically!
 #Start
 start.usage=/start
 start.description=Sets the countdown to 15 seconds
@@ -52,3 +54,17 @@ teamsize.usage=/teamsize <teamsize>
 teamsize.description=Sets the teamsize
 teamsize.set=%hThe teamsize was set to {0}!
 teamsize.already=%wThe teamsize is already %h{0}%w!
+#Scoreboard
+scoreboard.kills=%rKills: %h{0}
+scoreboard.teamkills %rKills: %h{0}%r/{1}
+scoreboard.alive=%rAlive: %h{0}
+scoreboard.teamalive=%rAlive: %h{0}%r/%h{1}
+scoreboard.distance=%rDistance to border: %h{0}
+scoreboard.shrink=%rShrinking: %h{0}%
+scoreboard.nextzone=%rNext Zone: %h{0}%
+#Border
+border.left=%wYou left the zone!
+border.out=%wYou are out of the zone! Try to get inside as fast as possible!
+border.join=§aYou are back in zone
+#Map
+map.title=%hWorldmap
