--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -2,11 +2,9 @@
 color.text=§7
 color.highlight=§e
 color.warning=§c
-
 JoinQuit
-join.message={0}[§2+§7]
-quit.message={0}[§4-§7]
-
+join.message={0}%r[§2+%r]
+quit.message={0}%r[§4-%r]
 #Color
 color.black=Schwarz
 color.dark_gray=Dunkelgrau
@@ -28,7 +26,7 @@ color.click=%rKlicke, um {0}%r beizutreten!
 #Team
 team.already=%wDu bist bereits in diesem Team!
 team.title=Wähl ein Team aus!
-team.changed=%hDein Team wurde erfolgreich gewechselt!
+team.changed=%hDu bist jetzt in Team {0}%r!
 team.full=%wDas Team ist schon voll!
 #JumpnRun
 jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
@@ -44,9 +42,12 @@ countdown.missing=%wEs fehlen/fehlt noch %h{0}%w Spieler!
 #Timer
 timer.timer=Spielzeit
 #Teleport
+teleport.title=%wSneak um zu fallen!
+teleport.subtitle=%hDu wirst alle 10 Sekunden teleportiert!
 teleport.time=%wTeleport in {0} Sekunden!
 teleport.teleport=§aTeleportiere...!
-teleport.left=%aDu bist ab jetzt angreifbar! Viel Glück!
+teleport.left=%hDu bist ab jetzt im freien Fall und damit angreifbar! Viel Glück!
+teleport.remove=%wNur noch {0} Sekunden bis du automatisch startest!
 #Start
 start.usage=/start
 start.description=Setzt den Countdown auf 15 Sekunden
@@ -57,3 +58,17 @@ teamsize.usage=/teamsize <Teamgröße>
 teamsize.description=Setzt die Teamgröße
 teamsize.set=%hDie Teamgröße wurde auf {0} gesetzt!
 teamsize.already=%wDie Teamgröße beträgt bereits %h{0}%w!
+#Scoreboard
+scoreboard.kills=%rHinrichtungen: %h{0}
+scoreboard.teamkills %rHinrichtungen: %h{0}%r/{1}
+scoreboard.alive=%rLebend: %h{0}
+scoreboard.teamalive=%rLebend: %h{0}%r/%h{1}
+scoreboard.distance=%rDistanz zur Border: %h{0}
+scoreboard.shrink=%rSchrumpft: %h{0}%
+scoreboard.nextzone=%rNächste Zone: %h{0}%
+#Border
+border.left=%wDu hast die Zone verlassen!
+border.out=%wDu bist außerhalb der Zone! Versuche möglichst schnell wieder hineinzugelangen!
+border.join=§aDu bist wieder in der Border!
+#Map
+map.title=%hWeltkarte
