--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -3,8 +3,8 @@ color.text=§7
 color.highlight=§e
 color.warning=§c
 JoinQuit
-join.message={0}%r[§2+%r]
-quit.message={0}%r[§4-%r]
+lobby.join={0}%r[§2+%r]
+lobby.quit={0}%r[§4-%r]
 #Color
 color.black=Schwarz
 color.dark_gray=Dunkelgrau
@@ -28,6 +28,7 @@ team.already=%wDu bist bereits in diesem Team!
 team.title=Wähl ein Team aus!
 team.changed=%hDu bist jetzt in Team {0}%r!
 team.full=%wDas Team ist schon voll!
+team.eliminated={0}%w wurde ausgelöscht!
 #JumpnRun
 jumpnrun.finished=%hDas war sehr knorke! Du erhälst §a{0} Schnitzel!
 #Unit
@@ -60,15 +61,50 @@ teamsize.set=%hDie Teamgröße wurde auf {0} gesetzt!
 teamsize.already=%wDie Teamgröße beträgt bereits %h{0}%w!
 #Scoreboard
 scoreboard.kills=%rHinrichtungen: %h{0}
-scoreboard.teamkills %rHinrichtungen: %h{0}%r/{1}
+scoreboard.teamkills %rHinrichtungen: %h{0}%r/%h{1}
 scoreboard.alive=%rLebend: %h{0}
-scoreboard.teamalive=%rLebend: %h{0}%r/%h{1}
+scoreboard.teamalive=%rLebend: %h{0}%r(%h{1}%r)
 scoreboard.distance=%rDistanz zur Border: %h{0}
 scoreboard.shrink=%rSchrumpft: %h{0}%
 scoreboard.nextzone=%rNächste Zone: %h{0}%
 #Border
+border.shrink=§5Schrumpft...
+border.nextZone=§eNächste Zone...
 border.left=%wDu hast die Zone verlassen!
 border.out=%wDu bist außerhalb der Zone! Versuche möglichst schnell wieder hineinzugelangen!
 border.join=§aDu bist wieder in der Border!
 #Map
 map.title=%hWeltkarte
+#Quit
+game.quit={0}%w hat das Spiel verlassen!
+game.death={0} ist gestorben!
+game.kill={0}%r wurde von {1} %rgetötet!
+#Finish
+finish.finish=%hDas Spiel ist zu Ende. Gewonnen hat {0}%r!
+finish.team.title=%wAUSGESCHIEDEN!
+finish.team.subtitle=%hDu belegst den %h{0}.%w Platz!
+#Compass
+compass.name=%hSpielerübersicht
+#Parachute
+parachute.name=%hFallschirm
+#MaxPlayerBars
+maxPlayerBars.description=Setzt die maximale Anzahl an gleichzeitig angezeigten Lebensleisten
+maxPlayerBars.usage=/maxPlayerBas <Anzahl>
+maxPlayerBars.get=%rDir werden maximal %h{0}%r Spieler Lebensleisten gleichzeitig angezeigt!
+maxPlayerBars.changed=%hDie maximale Anzahl an Spieler Lebensleisten wurde geändert!
+maxPlayerBars.already=%wDir werden bereits maximal %h{0}%w Spieler Lebensleisten angezeigt!
+maxPlayerBars.below=%wDie Zahl darf nicht negativ sein!
+maxPlayerBars.above=%wDie Zahl darf nicht über 64 sein!
+#Settings
+settings.item=%hEinstellungen(Rechtsklick)
+settings.inventory=Einstellungen
+settings.maxPlayerBars.item=%hMaximale Anzahl an Lebensleisten
+settings.maxPlayerBars.arrowUp=%hErhöhen%r(Linksklick)
+settings.maxPlayerBars.arrowDown=%hVerringern%r(Linksklick)
+settings.maxPlayerBars.inventory=Lebensleisten
+#Knocked
+knocked.noplayer={0}%r ist bewusstlos geworden!
+knocked.player={0}%r wurde von {1}%r bewusstlos geschlagen!
+#Drop
+drop.spawned=§5Ein Drop wurde bei %h{0}§5, %h{1}§5 gespawnt!
+drop.looted=§5Der Drop bei %h{0}§5, %h{1}§5 wurde gelootet!
