--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -1,10 +1,10 @@
 JoinQuit
-join.message={0}%r[§2+%r]
-quit.message={0}%r[§4-%r]
+lobby.join={0}%r[§2+%r]
+lobby.quit={0}%r[§4-%r]
 #Color
 color.black=Black
-color.dark_gray=Darkgray
-color.gray=Gray
+color.dark_gray=Darkgrey
+color.gray=Grey
 color.white=White
 color.aqua=Aqua
 color.dark_aqua=Darkaqua
@@ -24,6 +24,7 @@ team.already=%wYou are already in this Team!
 team.title=Choose a team!
 team.changed=%hYour Team has been changed!
 team.full=%wThe team is full!
+team.eliminated={0}%w has been eliminated!
 #JumpnRun
 jumpnrun.finished=Very pro! You will receive §a{0} Schnitzels!
 #Unit
@@ -56,15 +57,48 @@ teamsize.set=%hThe teamsize was set to {0}!
 teamsize.already=%wThe teamsize is already %h{0}%w!
 #Scoreboard
 scoreboard.kills=%rKills: %h{0}
-scoreboard.teamkills %rKills: %h{0}%r/{1}
+scoreboard.teamkills %rKills: %h{0}%r/%h{1}
 scoreboard.alive=%rAlive: %h{0}
 scoreboard.teamalive=%rAlive: %h{0}%r/%h{1}
 scoreboard.distance=%rDistance to border: %h{0}
 scoreboard.shrink=%rShrinking: %h{0}%
 scoreboard.nextzone=%rNext Zone: %h{0}%
 #Border
+border.shrink=%rShrinking...
+border.nextZone=%rNext Zone...
 border.left=%wYou left the zone!
 border.out=%wYou are out of the zone! Try to get inside as fast as possible!
 border.join=§aYou are back in zone
 #Map
 map.title=%hWorldmap
+#Quit
+game.running=%wThe game is already running! You are a spectator!
+game.quit={0}%w has left the game!
+game.death={0}%r has died!
+game.kill={0}%r has been killed by {1}&r!
+#Finish
+finish.finish=%hThe gme is finished. {0}%h has won!
+finish.team.title=%wELIMINATED!
+finish.team.subtitle=%hYou finished as %h{0}.%w place!
+#Compass
+compass.name=%hPlayeroverview
+#Parachute
+parachute.name=%hParachute
+#MaxPlayerBars
+maxPlayerBars.description=Sets the maximal amount of player healthbars
+maxPlayerBars.usage=/maxPlayerBas <Amount>
+maxPlayerBars.get=%rYou can see %h{0}%r player healthbars maximally!
+maxPlayerBars.changed=%hThe maximal amount of player healthbars has been changed!
+maxPlayerBars.already=%wYou will see %h{0}%w player healthbars maximally!
+maxPlayerBars.below=%wThe number mustn´t be negative!
+maxPlayerBars.above=%wThe number mustn´t be above 64!
+#Settings
+settings.item=%hSettings(Rightclick)
+settings.inventory=Settings
+settings.maxPlayerBars.item=%hMaximal amount of player healthbars
+settings.maxPlayerBars.arrowUp=%hRaise%r(Leftclick)
+settings.maxPlayerBars.arrowDown=%hReduce%r(Leftclick)
+settings.maxPlayerBars.inventory=Healthbars
+#Knocked
+knocked.noplayer={0}%r got knocked!
+knocked.player={0}%r has been knocked by {1}
