--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -77,7 +77,7 @@ game.quit={0}%w has left the game!
 game.death={0}%r has died!
 game.kill={0}%r has been killed by {1}&r!
 #Finish
-finish.finish=%hThe gme is finished. {0}%h has won!
+finish.finish=%hThe game is finished. {0}%h has won!
 finish.team.title=%wELIMINATED!
 finish.team.subtitle=%hYou finished as %h{0}.%w place!
 #Compass
@@ -99,6 +99,21 @@ settings.maxPlayerBars.item=%hMaximal amount of player healthbars
 settings.maxPlayerBars.arrowUp=%hRaise%r(Leftclick)
 settings.maxPlayerBars.arrowDown=%hReduce%r(Leftclick)
 settings.maxPlayerBars.inventory=Healthbars
+settings.barSetting.zone.item=%hZonestate will be displayed in bossbar
+settings.barSetting.events.item=%hEventstate will be displayed in bossbar
 #Knocked
 knocked.noplayer={0}%r got knocked!
 knocked.player={0}%r has been knocked by {1}
+#Event
+event.comingup.bossbar=%hNext... {0}
+event.comingup.scoreboard=%hNext: {0} %r({1}%)
+event.finished.bossbar={0}
+event.finished.scoreboard={0}%r({1}%)
+event.enabled=The event {0} %ris now §2active!
+event.disabled=The event {0} %ris now §4inactive!
+event.poisonwater=§2Poisonwater
+event.glowing=§b§lGlowing
+event.burningsun=§4Burn$6ing $eSun
+event.confusion=§6§k!!!§r§3Nausea§6§k!!!
+event.lostness=§8§ossentsoL
+event.endergames=§5En§0der§5Gam§0es
