--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -102,9 +102,24 @@ settings.maxPlayerBars.item=%hMaximale Anzahl an Lebensleisten
 settings.maxPlayerBars.arrowUp=%hErhöhen%r(Linksklick)
 settings.maxPlayerBars.arrowDown=%hVerringern%r(Linksklick)
 settings.maxPlayerBars.inventory=Lebensleisten
+settings.barSetting.zone.item=%hZonenstatus wird in der Bossbar angezeigt
+settings.barSetting.events.item=%hEventstatus wird in der Bossbar angezeigt
 #Knocked
 knocked.noplayer={0}%r ist bewusstlos geworden!
 knocked.player={0}%r wurde von {1}%r bewusstlos geschlagen!
 #Drop
 drop.spawned=§5Ein Drop wurde bei %h{0}§5, %h{1}§5 gespawnt!
 drop.looted=§5Der Drop bei %h{0}§5, %h{1}§5 wurde gelootet!
+#Event
+event.comingup.bossbar=%hAls nächstes... {0}
+event.comingup.scoreboard=%hAls nächstes: {0} %r({1}%)
+event.finished.bossbar={0}
+event.finished.scoreboard={0}%r({1}%)
+event.enabled=Das Event {0} %rist jetzt §2aktiv!
+event.disabled=Das Event {0} %rist jetzt §4deaktiviert!
+event.poisonwater=§2Giftwasser
+event.glowing=§b§lLeuchten
+event.burningsun=§4Brenn§6ende §eSonne
+event.confusion=§6§k!!!§r§3Schwindel§6§k!!!
+event.lostness=§8§ossentsoL
+event.endergames=§5En§0der§5Gam§0es
