--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -104,6 +104,11 @@ settings.maxPlayerBars.arrowDown=%hVerringern%r(Linksklick)
 settings.maxPlayerBars.inventory=Lebensleisten
 settings.barSetting.zone.item=%hZonenstatus wird in der Bossbar angezeigt
 settings.barSetting.events.item=%hEventstatus wird in der Bossbar angezeigt
+#BarSettingZone
+barSettingZone.usage=/barSettingZone
+barSettingZone.description=Ändert ob die Zone oder die Events in der Bossbar angezeigt werden
+barSettingZone.enabled=Zone wird in der Bossbar angezeigt!
+barSettingZone.disabled=Events werden in der Bossbar angezeigt!
 #Knocked
 knocked.noplayer={0}%r ist bewusstlos geworden!
 knocked.player={0}%r wurde von {1}%r bewusstlos geschlagen!
@@ -112,9 +117,9 @@ drop.spawned=§5Ein Drop wurde bei %h{0}§5, %h{1}§5 gespawnt!
 drop.looted=§5Der Drop bei %h{0}§5, %h{1}§5 wurde gelootet!
 #Event
 event.comingup.bossbar=%hAls nächstes... {0}
-event.comingup.scoreboard=%hAls nächstes: {0} %r({1}%)
+event.comingup.scoreboard=%rAls nächstes: {0} %r(%h{1}%)
 event.finished.bossbar={0}
-event.finished.scoreboard={0}%r({1}%)
+event.finished.scoreboard={0}%r(%h{1}%)
 event.enabled=Das Event {0} %rist jetzt §2aktiv!
 event.disabled=Das Event {0} %rist jetzt §4deaktiviert!
 event.poisonwater=§2Giftwasser
@@ -123,3 +128,10 @@ event.burningsun=§4Brenn§6ende §eSonne
 event.confusion=§6§k!!!§r§3Schwindel§6§k!!!
 event.lostness=§8§ossentsoL
 event.endergames=§5En§0der§5Gam§0es
+event.fishmutation=§3Fisch§5Mutation
+event.lava=§6The§4Ground§6Is§4Lava
+event.levitation=§8RedBull verleiht Flüüüügel
+#Chat
+chat.global=%r[Global] {0}§8:%r {1}
+chat.team=%r[{0}%r] {1}§8:%r {2}
+chat.spec=%r[§8Spec%r] {0}§8:%r {1]
