--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -92,6 +92,11 @@ maxPlayerBars.changed=%hThe maximal amount of player healthbars has been changed
 maxPlayerBars.already=%wYou will see %h{0}%w player healthbars maximally!
 maxPlayerBars.below=%wThe number mustn´t be negative!
 maxPlayerBars.above=%wThe number mustn´t be above 64!
+#BarSettingZone
+barSettingZone.usage=/barSettingZone
+barSettingZone.description=Toggles if zone or events are shown in bossbar
+barSettingZone.enabled=Zone will be displayed in bossbar
+barSettingZone.disabled=Events will be displayed in bossbar
 #Settings
 settings.item=%hSettings(Rightclick)
 settings.inventory=Settings
@@ -106,14 +111,24 @@ knocked.noplayer={0}%r got knocked!
 knocked.player={0}%r has been knocked by {1}
 #Event
 event.comingup.bossbar=%hNext... {0}
-event.comingup.scoreboard=%hNext: {0} %r({1}%)
+event.comingup.scoreboard=%rNext: {0} %r(%h{1}%%r)
 event.finished.bossbar={0}
-event.finished.scoreboard={0}%r({1}%)
+event.finished.scoreboard={0}%r(%h{1}%%r)
 event.enabled=The event {0} %ris now §2active!
 event.disabled=The event {0} %ris now §4inactive!
 event.poisonwater=§2Poisonwater
 event.glowing=§b§lGlowing
-event.burningsun=§4Burn$6ing $eSun
+event.burningsun=§4Burn§6ing§eSun
 event.confusion=§6§k!!!§r§3Nausea§6§k!!!
 event.lostness=§8§ossentsoL
 event.endergames=§5En§0der§5Gam§0es
+event.fishmutation=§3Fish§5mutation
+event.lava=§6The§4Ground§6Is§4Lava
+event.levitation=§4§lRedBull §f§fGives You Wings
+#Chat
+chat.global=%r[Global] {0}§8:%r {1}
+chat.team=%r[{0}%r] {1}§8:%r {2}
+chat.spec=%r[§8Spec%r] {0}§8:%r {1]
+#Drop
+drop.spawned=§5A drop has been spawned!
+drop.looted=§5The drop has been looted!
