--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -76,7 +76,6 @@ border.join=§aDu bist wieder in der Border!
 #Map
 map.title=%hWeltkarte
 #Quit
-game.quit={0}%w hat das Spiel verlassen!
 game.death={0} ist gestorben!
 game.kill={0}%r wurde von {1} %rgetötet!
 #Finish
@@ -130,7 +129,7 @@ event.lostness=§8§ossentsoL
 event.endergames=§5En§0der§5Gam§0es
 event.fishmutation=§3Fisch§5Mutation
 event.lava=§6The§4Ground§6Is§4Lava
-event.levitation=§8RedBull verleiht Flüüüügel
+event.levitation=§d§lAbgehoben
 #Chat
 chat.global=%r[Global] {0}§8:%r {1}
 chat.team=%r[{0}%r] {1}§8:%r {2}
