--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -73,9 +73,8 @@ border.join=§aYou are back in zone
 map.title=%hWorldmap
 #Quit
 game.running=%wThe game is already running! You are a spectator!
-game.quit={0}%w has left the game!
 game.death={0}%r has died!
-game.kill={0}%r has been killed by {1}&r!
+game.kill={0}%r has been killed by {1}%r!
 #Finish
 finish.finish=%hThe game is finished. {0}%h has won!
 finish.team.title=%wELIMINATED!
@@ -124,7 +123,7 @@ event.lostness=§8§ossentsoL
 event.endergames=§5En§0der§5Gam§0es
 event.fishmutation=§3Fish§5mutation
 event.lava=§6The§4Ground§6Is§4Lava
-event.levitation=§4§lRedBull §f§fGives You Wings
+event.levitation=§d§lLevitation
 #Chat
 chat.global=%r[Global] {0}§8:%r {1}
 chat.team=%r[{0}%r] {1}§8:%r {2}
