--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -124,11 +124,11 @@ event.disabled=Das Event {0} %rist jetzt §4deaktiviert!
 event.poisonwater=§2Giftwasser
 event.glowing=§b§lLeuchten
 event.burningsun=§4Brenn§6ende §eSonne
-event.confusion=§6§k!!!§r§3Schwindel§6§k!!!
+event.confusion=§r§3Schwindel§6§k
 event.lostness=§8§ossentsoL
 event.endergames=§5En§0der§5Gam§0es
 event.fishmutation=§3Fisch§5Mutation
-event.lava=§6The§4Ground§6Is§4Lava
+event.lava=§6TheGround§4IsLava
 event.levitation=§d§lAbgehoben
 #Chat
 chat.global=%r[Global] {0}§8:%r {1}
