--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -118,7 +118,7 @@ event.disabled=The event {0} %ris now §4inactive!
 event.poisonwater=§2Poisonwater
 event.glowing=§b§lGlowing
 event.burningsun=§4Burn§6ing§eSun
-event.confusion=§6§k!!!§r§3Nausea§6§k!!!
+event.confusion=§6§r§3Nausea§6
 event.lostness=§8§ossentsoL
 event.endergames=§5En§0der§5Gam§0es
 event.fishmutation=§3Fish§5mutation
