--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -112,8 +112,8 @@ barSettingZone.disabled=Events werden in der Bossbar angezeigt!
 knocked.noplayer={0}%r ist bewusstlos geworden!
 knocked.player={0}%r wurde von {1}%r bewusstlos geschlagen!
 #Drop
-drop.spawned=§5Ein Drop wurde bei %h{0}§5, %h{1}§5 gespawnt!
-drop.looted=§5Der Drop bei %h{0}§5, %h{1}§5 wurde gelootet!
+drop.spawned=§5Ein Drop wurde gespawnt!
+drop.looted=§5Ein Drop wurde gelootet!
 #Event
 event.comingup.bossbar=%hAls nächstes... {0}
 event.comingup.scoreboard=%rAls nächstes: {0} %r(%h{1}%)
