--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -133,4 +133,27 @@ event.levitation=§d§lAbgehoben
 #Chat
 chat.global=%r[Global] {0}§8:%r {1}
 chat.team=%r[{0}%r] {1}§8:%r {2}
-chat.spec=%r[§8Spec%r] {0}§8:%r {1]
+chat.spec=%r[§8Spec%r] {0}§8:%r {1}
+#Stats
+stats.stats=§fBARO-§5Statistiken
+stats.all=§fDeine §5All-Time Statistiken
+stats.month=§fDeine §5Statistiken §fder letzten §530 Tage
+#Page1
+stats.positon=§fPosition im Ranking: §5{0}
+stats.kills=§fKills: §5{0}
+stats.deaths=§fDeaths: §5{0}
+stats.killsdeaths=§fK/D: §5{0}
+stats.games=§fSpiele: §5{0}
+stats.gameswon=§fGewonnene Spiele: §5{0}
+stats.winprobability=§fSiegeswahrscheinlichkeit: §5{0}%
+stats.averagePlace=§fDurchschnittliche Platzierung: §5{0}
+#Page2
+stats.damgeDealt=§fVerursachter Schaden: §5{0}
+stats.damageReceived=§fErhaltener Schaden: §5{0}
+stats.blocksPlaced=§fBlöcke platziert: §5{0}
+stats.blocksDestroyed=§fBlöcke zerstört: §5{0}
+stats.itemsCrafted=§fItems gecrafted: §5{0}
+stats.lootedChests=§fChests gelooted: §5{0}
+stats.lootedDrops=§fDrops gelooted: §5{0}
+stats.averagelifespan=§fDurchscnittliche Lebensspanne: §5{0}
+stats.counter=**********
