Created Project, Added Utils

--- a/src/i18n/langDE.properties
+++ b/src/i18n/langDE.properties
@@ -116,9 +116,9 @@ drop.spawned=§5Ein Drop wurde gespawnt!
 drop.looted=§5Ein Drop wurde gelootet!
 #Event
 event.comingup.bossbar=%hAls nächstes... {0}
-event.comingup.scoreboard=%rAls nächstes: {0} %r(%h{1}%)
+event.comingup.scoreboard=%rAls nächstes: {0} %r(%h{1}%%r)
 event.finished.bossbar={0}
-event.finished.scoreboard={0}%r(%h{1}%)
+event.finished.scoreboard={0}%r(%h{1}%%r)
 event.enabled=Das Event {0} %rist jetzt §2aktiv!
 event.disabled=Das Event {0} %rist jetzt §4deaktiviert!
 event.poisonwater=§2Giftwasser
@@ -139,9 +139,9 @@ stats.stats=§fBARO-§5Statistiken
 stats.all=§fDeine §5All-Time Statistiken
 stats.month=§fDeine §5Statistiken §fder letzten §530 Tage
 #Page1
-stats.positon=§fPosition im Ranking: §5{0}
+stats.position=§fPosition im Ranking: §5{0}
 stats.kills=§fKills: §5{0}
-stats.deaths=§fDeaths: §5{0}
+stats.deaths=§fTode: §5{0}
 stats.killsdeaths=§fK/D: §5{0}
 stats.games=§fSpiele: §5{0}
 stats.gameswon=§fGewonnene Spiele: §5{0}
@@ -155,5 +155,10 @@ stats.blocksDestroyed=§fBlöcke zerstört: §5{0}
 stats.itemsCrafted=§fItems gecrafted: §5{0}
 stats.lootedChests=§fChests gelooted: §5{0}
 stats.lootedDrops=§fDrops gelooted: §5{0}
-stats.averagelifespan=§fDurchscnittliche Lebensspanne: §5{0}
+stats.averagelifespan=§fDurchscnittliche Lebensspanne: §5{0} Minuten
 stats.counter=**********
+#ForceMap
+forceMap.usage=/forcemap
+forceMap.description=Erzwingt eine Map die gespielt wird
+forceMap.successfull=%rDie Map wurde erzwungen!
+forceMap.failure=%wDie Map existiert nicht!
