--- a/src/i18n/langEN.properties
+++ b/src/i18n/langEN.properties
@@ -131,3 +131,31 @@ chat.spec=%r[§8Spec%r] {0}§8:%r {1]
 #Drop
 drop.spawned=§5A drop has been spawned!
 drop.looted=§5The drop has been looted!
+#Stats
+stats.stats=§fBARO-§5Stats
+stats.all=§fYour §5All-Time-Stats
+stats.month=§fYour §5stats §fof the last §530 Days
+#Page1
+stats.position=§fPosition in ranking: §5{0}
+stats.kills=§fKills: §5{0}
+stats.deaths=§fDeaths: §5{0}
+stats.killsdeaths=§fK/D: §5{0}
+stats.games=§fGames: §5{0}
+stats.gameswon=§fWon games: §5{0}
+stats.winprobability=§fWinprobability: §5{0}%
+stats.averagePlace=§fAverage placement: §5{0}
+#Page2
+stats.damgeDealt=§fDealt Damage: §5{0}
+stats.damageReceived=§fReceived Damage: §5{0}
+stats.blocksPlaced=§fBlocks placed: §5{0}
+stats.blocksDestroyed=§fBlocks destroyed: §5{0}
+stats.itemsCrafted=§fItems crafted: §5{0}
+stats.lootedChests=§fChests looted: §5{0}
+stats.lootedDrops=§fDrops looted: §5{0}
+stats.averagelifespan=§fAverage lifespan: §5{0} Minutes
+stats.counter=**********
+#ForceMap
+forceMap.usage=/forcemap
+forceMap.description=Forces a map to play
+forceMap.successfull=%rThe map has been forced!
+forceMap.failure=%wThe map doesnt exist!
